softpython eyecandy #122: fixed scrollbars in chrome

--- a/_static/css/softpython-theme.css
+++ b/_static/css/softpython-theme.css
@@ -627,32 +627,56 @@ div.notranslate,  .admonition, .pytutorVisualizer {
  * Note Firefox is already fine, see https://github.com/DavidLeoni/jupman/issues/122
  */
 
-::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background-color: rgba(200, 200, 200, 0.3);
-}
 
-::-webkit-scrollbar {  
-  width: 7px;
+
+::-webkit-scrollbar {
+  width: 4px;
   height: 8px;
-  background-color: rgba(0, 0, 0, 0);
   
 }
 
-::-webkit-scrollbar-thumb {  
-  border-radius: 10px;    
-  background-color: rgba(10, 100, 150, 0.15);   
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5); 
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  visibility:hidden;
+}
+
+::-webkit-scrollbar-thumb {   
+  width:10%;
+  border-radius: 6px;    
+  background-color: rgb(218 217 217 / 90%);   
+ /* box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5); */
+  visibility:hidden !important;  
+}
+
+:hover::-webkit-scrollbar {  
+  visibility:inherit !important; 
+}
+:hover::-webkit-scrollbar-track {  
+  visibility:inherit !important; 
+}
+:hover::-webkit-scrollbar-thumb {  
+  visibility:inherit !important; 
+}
+
+
+.wy-side-scroll::-webkit-scrollbar {
+  display:none !important;
+}
+
+.wy-side-scroll:hover::-webkit-scrollbar {
+  display:inherit !important;
 }
 
 .wy-side-scroll::-webkit-scrollbar-track {
-  background-color: rgba(130, 150, 210,0.2) !important;
+  background-color:#cccf;
+  
+  display:inherit !important;
 }
+ 
 
 .wy-side-scroll::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: rgba(90, 90, 70) !important; 
-  box-shadow: inset 0 0 4px rgba(200, 200, 200, 0.2); 
+  background-color:#fff7 !important;
+  display:inherit !important;
 }
 
 /* *********  WEBKIT SCROLLBAR END   ********* */
